feat: 完成多批次功能迭代与优化
- 新增AI异步扫描任务表与进度追踪能力
- 新增数据库schema指纹增量扫描支持
- 新增扫描阶段定义与性能报告生成
- 优化向量存储与查询适配pgvector
- 优化批量操作与代码抽取性能
- 修复前端字典映射与状态展示问题
- 修复命令行参数注入风险
- 兼容旧配置字段与迁移脚本